# remote-monitoring-tool

./: CMakeLists.txt  README.md
res/model/: c4_l1.puml  c4_l2.puml  c4_l3_c.puml  c4_l3_s.puml  c4_l4.puml  c4_l4_client.puml  c4_l4_client_client_logger.puml  c4_l4_client_process_stat.puml  c4_l4_client_process_table.puml  c4_l4_client_server_connector.puml  c4_l4_common.puml  c4_l4_config_log.puml  c4_l4_event.puml  c4_l4_server.puml  c4_sequence_config.puml  c4_sequence_log.puml
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.hpp  client_logger.cpp  client_logger.hpp  exponential_backoff.cpp  exponential_backoff.hpp  log_queue.cpp  log_queue.hpp  main.cpp  network_processing.cpp  network_processing.hpp  process_listing.cpp  process_listing.hpp  process_stat.hpp  process_table.cpp  process_table.hpp  server_connector.cpp  server_connector.hpp
src/common/: CMakeLists.txt  config.cpp  config.hpp  config_entry.cpp  config_entry.hpp  error.cpp  error.hpp  event.hpp  event_bus.cpp  event_bus.hpp  exponential_backoff.cpp  exponential_backoff.hpp  global.hpp  input_event.cpp  input_event.hpp  input_handler.cpp  input_handler.hpp  log_entry.cpp  log_entry.hpp  network.cpp  network.hpp  network_event.cpp  network_event.hpp  registry.cpp  registry.hpp  serializable.cpp  serializable.hpp  util.cpp  util.hpp
src/server/: CMakeLists.txt  client_handler.cpp  client_handler.hpp  client_manager.cpp  client_manager.hpp  main.cpp  server.cpp  server.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  client_test.cpp  common_test.cpp
